--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
     <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
       <li class="nav-link"><a href="{{ site.baseurl }}/" class="logo"><strong>Home</strong></a>
-      <li class="nav-link"><a href="https://nawang.github.io/research"><strong>Research</strong></a>
-      <li class="nav-link"><a href="https://nawang.github.io/about"><strong>About Me</strong></a>
-      <li class="nav-link"><a href="https://nawang.github.io/tutorials"><strong>Tutorials</strong></a>
+      <li class="nav-link"><a href="https://nawangm.github.io/research"><strong>Research</strong></a>
+      <li class="nav-link"><a href="https://nawangm.github.io/about"><strong>About Me</strong></a>
+      <li class="nav-link"><a href="https://nawangm.github.io/tutorials"><strong>Tutorials</strong></a>
       </ul>
     </nav>
   </div>
