--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="site-signature">
-      <p><a href="https://www.linkedin.com/na-wang-0bb24a28"><i class="fa fa-linkedin-square"></i> LinkedIn</a></p>
+      <p><a href="https://www.linkedin.com/in/na-wang-0bb24a28"><i class="fa fa-linkedin-square"></i> LinkedIn</a></p>
     </div>
 
   </div>
